# streamlit-poetry-docker

./: Dockerfile  README.md  justfile  pyproject.toml
flask/: server.py
