[tool.poetry]
name = "streamlit-poetry-docker"
version = "0.1.0"
description = ""
authors = ["Hasan <hasan.jafri7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
pandas = "^2.2.3"
altair = "^5.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
